- implemented REST API test cases